[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Game Of Squids.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/menu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/uiBackground/textBackground.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 120
use_filter = true
font_data = ExtResource( 1 )

[node name="menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_left = 615.0
margin_top = 300.0
margin_right = 1304.0
margin_bottom = 779.0
alignment = 1

[node name="lv1btn" type="Button" parent="ColorRect/VBoxContainer"]
margin_right = 689.0
margin_bottom = 157.0
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 1"

[node name="lv2btn" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 161.0
margin_right = 689.0
margin_bottom = 318.0
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 2"

[node name="Quitbtn" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 322.0
margin_right = 689.0
margin_bottom = 479.0
custom_colors/font_color = Color( 1, 0.984314, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/lv1btn" to="." method="_on_lv1btn_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/lv2btn" to="." method="_on_lv2btn_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Quitbtn" to="." method="_on_Quitbtn_pressed"]
